--- a/SIS_UMS/SIS_UMS/Views/Room/CreateRoom.cshtml
+++ b/SIS_UMS/SIS_UMS/Views/Room/CreateRoom.cshtml
@@ -5,8 +5,8 @@
 }
 
 <form asp-action="CreateRoom" asp-controller="Room">
-
-    <input asp-for="room.room_code" placeholder="Room Code :" />
+    <label asp-for="room.room_code" >Room Code</label>
+    <input asp-for="room.room_code" placeholder="Room Code :" required />
 
     <div class="form-group">
         <label asp-for="room.block_id">Select Block :</label>
@@ -17,10 +17,16 @@
     </div>
 
 
+    <label asp-for="room.floor_number" >Floor Number</label>
+    <input asp-for="room.floor_number" required />
 
-    <input asp-for="room.floor_number" placeholder="Floor : " />
-    <input asp-for="room.room_capacity" placeholder="Capacity : " />
+    <label asp-for="room.room_capacity"> Room Capacity</label>
+    <input asp-for="room.room_capacity"  required />
 
+    <a asp-action="Index" asp-controller="Campus" class="btn btn-primary">Back to List</a>
 
-    <input type="submit" />
+    <button type="submit" name="action" value="Create" class="btn btn-primary">Create</button>
+    <button type="submit" name="action" value="CreateAndNext" class="btn btn-success">Create and Next</button>
+
+   
 </form>
